<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2196F3"
        android:padding="8dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#03A9F4"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/lytusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:textAlignment="center"
                android:textColor="#A21FBB"
                android:textColorHint="#A21FBB"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:layout_marginBottom="7dp"/>

            <EditText
                android:id="@+id/lytpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHighlight="#00D51A1A"
                android:textColorHint="#A21FBB"
                android:textColor="#A21FBB"
                android:textColorLink="#00FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:layout_marginBottom="7dp"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#EE1000"
                android:text="@string/beniHatirla"
                android:textColor="#9C27B0"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:layout_marginBottom="7dp"/>

            <Button
                android:id="@+id/lytlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#9C27B0"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:layout_marginBottom="7dp"
                android:visibility="visible"/>

            <ProgressBar
                android:id="@+id/lytprogressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="7dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgettopassword"
                android:textStyle="bold|italic"
                android:textColor="#E545FF"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/lytcreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/editTextColor"
            android:textStyle="italic|bold"
            android:textSize="24sp"
            android:background="@drawable/button"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</layout>